# MLES_IMU

analysis/: hw1_analysis.ipynb  hw1_report.tex
project/: CMakeLists.txt  README.md
project/include/: config.h
project/lab_algorithms/: fft.c  quantization.c  statistic.c
project/src/: classifier.c  classifier.h  csv_logger.cpp  csv_logger.h  features.c  features.h  filters.c  filters.h  main.c
project/tools/: clean_log.sh  log_pico.sh
sd_card_example/: CMakeLists.txt  main.cpp
sd_card_example/config/: hw_config.c
sd_card_example/sd_card_driver/: CMakeLists.txt
